--- a/src/solvers/changes
+++ b/src/solvers/changes
@@ -3189,3 +3189,23 @@ opno2.h in part for forthcoming new source file nl1vcount.c.
 20200404
   solvers2.tgz:  fix some bugs in pfghread.c and pshvprod.c with
 Hessian computations.  The bugs caused "bad opnumber" messages.
+  Remove machlc from makefile.u.
+
+20200413
+  solvers2.tgz:  fix bugs (missing cases) in degree.c, fg_write.c,
+and indic_cons.c.
+
+20200831
+  solvers2.tgz:  fix another bug (missing cases) in degree.c.
+
+20200928
+  solvers2.tgz:  fix a bug (missing case) in sphes.c.
+
+20201018
+  solvers2.tgz: eval1.c, eval2.c:  fix bugs in handling seldom-seen
+iterated "and" and "or" operations; eval2.c:  fix a glitch with error
+handling with const^x and add cases OP_atan201_g and OP_atan210_g;
+pfghread.c:  fix a bug in qwalk() with OPCPOW; pshvprod.c:  add a
+missing case and fix a glitches with OPDIV2 and nOPLESS2; remove need
+for source file op_typeb.hd; opno2.h:  add OP_atan201_g and
+OP_atan210_g; fix bugs in var^var and atan2(var,var).
