--- a/solvers/xpress/changes
+++ b/solvers/xpress/changes
@@ -256,3 +256,9 @@ improvements.  New keywords:  globalfilemax, globalloginterval,
 maxmemoryhard, mipdualreductions, resourcestrategy.  Expanded
 description of refineops.  Keyword nodefilebias is now noted
 as "deprecated and ignored".  See the "xpress -=" output.
+
+20201210
+  xpress.c:  update to XPRESS 8.10, which has bug fixes and
+improvements.  New keywords:  autoscaling, feastol_perturb.
+New control bits for refineops.  See the "xpress -=" output
+for details.
