--- a/solvers/gurobi/changes
+++ b/solvers/gurobi/changes
@@ -432,3 +432,31 @@ computation of a condition number of an optimal basis.  To bypass a
 gurobi bug with nonlinear constraints, for now an irreducible set of
 infeasible constraints (keyword iisfind) will only be sought among
 linear constraints.
+
+20201130
+  gurobi.c:  Update to Gurobi 9.1, which contains performance
+improvements and bug fixes.  Added new possible value (-1) to suffix
+lazy to specify predefined user cuts.  Added keywords integrality,
+norelheurtime, norelheurwork; see "gurobi -=" for details.
+  No changes to gurobi.c for later GUROBI versions through 9.1.1.
+
+20210929
+  gurobi.c:  Fix a bug that caused an incoming basis to be ignored
+when no constraints were in the basis.
+
+20211001
+  gurobi.c:  Fix a mistake in the changes of 20210929, and fix a
+couple of glitches with #if lines.
+
+20211008
+  gurobi.c:  Fix a glitch with range constraints (only seen with AMPL's
+option presolve 0).
+
+20220124
+  gurobi.c:  Update for Gurobi 9.5.  New keywords:  cloudhost,
+concurrentwin, liftprojectcuts, lpwarmstart, memlimit, nlpheur,
+presos1enc, presos2enc, work, worklimit; see "gurobi -=" for details.
+New input suffixes (influencing Gurobi's behavior):  iisforce,
+iisforcelb, iisforceub, poolignore.  New output suffixes (returned by
+Gurobi on request):  concurrentwinmethod, maxvio, sensrhshi2,
+sensrhslo2, work.
